--- a/AUF.EMR.MVC/Views/OralHealthClient/TwentyToFourtynine.cshtml
+++ b/AUF.EMR.MVC/Views/OralHealthClient/TwentyToFourtynine.cshtml
@@ -17,7 +17,7 @@
     <h1 class="text-2xl font-bold mb-8">Masterlist of Oral Health Care Clients - 20 to 49 years old</h1>
 
     <div class="flex justify-end mb-6">
-        <button type="button" onclick="print('Print', 'OralHealthClient', @Model.HouseholdNo)"
+        <button type="button" onclick="print('Print', 'OralHealthClient', '@Model.HouseholdNo?.ToString()')"
                 class="flex-shrink-0 inline-block bg-primary-50 hover:bg-primary-300 text-white font-medium py-3 px-6 rounded-lg transition duration-300 ease-in-out">
             Print Masterlist
         </button>
