--- a/AUF.EMR.MVC/Views/DiabetesRisk/Details.cshtml
+++ b/AUF.EMR.MVC/Views/DiabetesRisk/Details.cshtml
@@ -14,7 +14,7 @@
             </div>
             <div class="flex justify-end mb-6 gap-3">
                 <div class="bg-blue-500 hover:bg-blue-600 inline-flex items-center text-white py-2 px-5 rounded-lg w-28">
-                    <button type="button" onclick="print('Print', 'DiabetesRisk', @Model.HouseholdNo, @Model.DiabetesRisk.Id, @Model.DiabetesRisk.HouseholdMemberId)">
+                    <button type="button" onclick="print('Print', 'DiabetesRisk', '@Model.HouseholdNo?.ToString()', '@Model.DiabetesRisk.Id', '@Model.DiabetesRisk.HouseholdMemberId')">
                         <svg class="w-5 h-5 text-white inline-block mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                             <path fill-rule="evenodd" d="M8 3a2 2 0 0 0-2 2v3h12V5a2 2 0 0 0-2-2H8Zm-3 7a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h1v-4a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v4h1a2 2 0 0 0 2-2v-5a2 2 0 0 0-2-2H5Zm4 11a1 1 0 0 1-1-1v-4h8v4a1 1 0 0 1-1 1H9Z" clip-rule="evenodd" />
                         </svg>
