--- a/AUF.EMR.MVC/Views/DiabetesRisk/Index.cshtml
+++ b/AUF.EMR.MVC/Views/DiabetesRisk/Index.cshtml
@@ -73,7 +73,7 @@
                             <!--Action Button-->
                             <td class="px-4 py-2 inline-flex items-center text-center text-lg">
                                 <a asp-action="Details" asp-route-id="@item.Id" asp-route-householdNo="@Model.HouseholdNo" class="text-green-400 hover:text-green-500 mr-2"><i class="fas fa-eye"></i></a>
-                                <button type="button" onclick="print('Print', 'DiabetesRisk', @Model.HouseholdNo, @item.Id, @item.HouseholdMemberId)" class="text-blue-400 hover:text-blue-600 mr-2"><i class="fa-solid fa-print"></i></button>
+                                <button type="button" onclick="print('Print', 'DiabetesRisk', '@Model.HouseholdNo?.ToString()', '@item.Id', '@item.HouseholdMemberId')" class="text-blue-400 hover:text-blue-600 mr-2"><i class="fa-solid fa-print"></i></button>
                                 <button data-modal-target="popup-modal-2" data-modal-toggle="popup-modal-2" data-member-id="@item.Id" class="delete-btn text-red-400 hover:text-red-500 mr-2"><i class="fas fa-trash"></i></button>
                             </td>
                         </tr>
